--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,6 @@
       }
     },
     "require-dev": {
-        "woocommerce/woocommerce-sniffs": "^0.1.0"
+      "squizlabs/php_codesniffer": "3.*"
     }
 }
